# judy

./: Makefile.am  Makefile.in  aclocal.m4  bootstrap  configure  configure.ac  driver.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: README.source  changelog  control  rules  watch
debian/patches/: 01_notrans_man.patch  02_remove_duplicate_man.patch  03_add_man_section_to_filename  series
doc/: Makefile.am  Makefile.in
src/: Makefile.in  driver.sh
src/Judy1/: Makefile.am  Makefile.in
src/JudyCommon/: Makefile.am  Makefile.in
src/JudyHS/: Makefile.am  Makefile.in
src/JudyL/: Makefile.am  Makefile.in
src/JudySL/: Makefile.am  Makefile.in
test/: Makefile.in
tool/: Makefile.am  Makefile.in
