notrans_man3_MANS = man/man3/Judy.3 \
	    man/man3/Judy1.3 \
	    man/man3/Judy1_funcs.3 \
	    man/man3/JudyL.3 \
	    man/man3/JudyL_funcs.3 \
	    man/man3/JudySL.3 \
	    man/man3/JudySL_funcs.3 \
	    man/man3/JudyHS.3 \
	    man/man3/JudyHS_funcs.3 \
	    man/man3/J1T.3 \
	    man/man3/J1S.3 \
	    man/man3/J1U.3 \
	    man/man3/J1F.3 \
	    man/man3/J1N.3 \
	    man/man3/J1L.3 \
	    man/man3/J1P.3 \
	    man/man3/J1FE.3 \
	    man/man3/J1NE.3 \
	    man/man3/J1LE.3 \
	    man/man3/J1PE.3 \
	    man/man3/J1C.3 \
	    man/man3/J1BC.3 \
	    man/man3/J1FA.3 \
	    man/man3/J1MU.3 \
	    man/man3/Judy1Test.3 \
	    man/man3/Judy1Set.3 \
	    man/man3/Judy1Unset.3 \
	    man/man3/Judy1First.3 \
	    man/man3/Judy1Next.3 \
	    man/man3/Judy1Last.3 \
	    man/man3/Judy1Prev.3 \
	    man/man3/Judy1FirstEmpty.3 \
	    man/man3/Judy1NextEmpty.3 \
	    man/man3/Judy1LastEmpty.3 \
	    man/man3/Judy1PrevEmpty.3 \
	    man/man3/Judy1Count.3 \
	    man/man3/Judy1ByCount.3 \
	    man/man3/Judy1FreeArray.3 \
	    man/man3/Judy1MemUsed.3 \
	    man/man3/JLG.3 \
	    man/man3/JLI.3 \
	    man/man3/JLD.3 \
	    man/man3/JLF.3 \
	    man/man3/JLN.3 \
	    man/man3/JLL.3 \
	    man/man3/JLP.3 \
	    man/man3/JLFE.3 \
	    man/man3/JLNE.3 \
	    man/man3/JLLE.3 \
	    man/man3/JLPE.3 \
	    man/man3/JLC.3 \
	    man/man3/JLBC.3 \
	    man/man3/JLFA.3 \
	    man/man3/JLMU.3 \
	    man/man3/JudyLGet.3 \
	    man/man3/JudyLIns.3 \
	    man/man3/JudyLDel.3 \
	    man/man3/JudyLFirst.3 \
	    man/man3/JudyLNext.3 \
	    man/man3/JudyLLast.3 \
	    man/man3/JudyLPrev.3 \
	    man/man3/JudyLFirstEmpty.3 \
	    man/man3/JudyLNextEmpty.3 \
	    man/man3/JudyLLastEmpty.3 \
	    man/man3/JudyLPrevEmpty.3 \
	    man/man3/JudyLCount.3 \
	    man/man3/JudyLByCount.3 \
	    man/man3/JudyLFreeArray.3 \
	    man/man3/JudyLMemUsed.3 \
	    man/man3/JSLG.3 \
	    man/man3/JSLI.3 \
	    man/man3/JSLD.3 \
	    man/man3/JSLF.3 \
	    man/man3/JSLN.3 \
	    man/man3/JSLL.3 \
	    man/man3/JSLP.3 \
	    man/man3/JSLFA.3 \
	    man/man3/JudySLGet.3 \
	    man/man3/JudySLIns.3 \
	    man/man3/JudySLDel.3 \
	    man/man3/JudySLFirst.3 \
	    man/man3/JudySLNext.3 \
	    man/man3/JudySLLast.3 \
	    man/man3/JudySLPrev.3 \
	    man/man3/JudySLFreeArray.3 \
	    man/man3/JHSG.3 \
	    man/man3/JHSI.3 \
	    man/man3/JHSD.3 \
	    man/man3/JHSFA.3 \
	    man/man3/JudyHSGet.3 \
	    man/man3/JudyHSIns.3 \
	    man/man3/JudyHSDel.3 \
	    man/man3/JudyHSFreeArray.3



man/man3/Judy.3:
	../tool/jhton ext/Judy_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.\.\./\&.\&.\&./' | sed -e 's/\(^Judy.*\) \([a-z].*\)s*-/\1 \\-/' | sed -e '/^.ds/d' | sed -e '/^.\\"/d' | sed -e '/^.TA/d' | sed -e 's/\.C//'| sed -e '2d' >  man/man3/Judy.3
	cd man/man3; ln -s Judy.3 J1T.3
	cd man/man3; ln -s Judy.3 J1S.3
	cd man/man3; ln -s Judy.3 J1U.3
	cd man/man3; ln -s Judy.3 J1F.3
	cd man/man3; ln -s Judy.3 J1N.3
	cd man/man3; ln -s Judy.3 J1L.3
	cd man/man3; ln -s Judy.3 J1P.3
	cd man/man3; ln -s Judy.3 J1FE.3
	cd man/man3; ln -s Judy.3 J1NE.3
	cd man/man3; ln -s Judy.3 J1LE.3
	cd man/man3; ln -s Judy.3 J1PE.3
	cd man/man3; ln -s Judy.3 J1C.3
	cd man/man3; ln -s Judy.3 J1BC.3
	cd man/man3; ln -s Judy.3 J1FA.3
	cd man/man3; ln -s Judy.3 J1MU.3

man/man3/Judy1.3:
	../tool/jhton ext/Judy1_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.\.\./\&.\&.\&./' | sed -e 's/\(^Judy.*\) \([a-z].*\)s*-/\1 \\-/' | sed -e '/^.ds/d' | sed -e '/^.\\"/d' | sed -e '/^.TA/d' | sed -e 's/\.C//'| sed -e '2d' > man/man3/Judy1.3

man/man3/Judy1_funcs.3:
	../tool/jhton ext/Judy1_funcs_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.\.\./\&.\&.\&./' | sed -e 's/\(^Judy.*\) \([a-z].*\)s*-/\1 \\-/' | sed -e '/^.ds/d' | sed -e '/^.\\"/d' | sed -e '/^.TA/d' | sed -e 's/\.C//'| sed -e '2d' > man/man3/Judy1_funcs.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1Test.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1Set.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1Unset.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1First.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1Next.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1Last.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1Prev.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1FirstEmpty.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1NextEmpty.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1LastEmpty.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1PrevEmpty.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1Count.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1ByCount.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1FreeArray.3
	cd man/man3; ln -s Judy1_funcs.3 Judy1MemUsed.3

man/man3/JudyL.3:
	../tool/jhton ext/JudyL_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.\.\./\&.\&.\&./' | sed -e 's/\(^Judy.*\) \([a-z].*\)s*-/\1 \\-/' | sed -e '/^.ds/d' | sed -e '/^.\\"/d' | sed -e '/^.TA/d' | sed -e 's/\.C//'| sed -e '2d' > man/man3/JudyL.3
	cd man/man3; ln -s JudyL.3 JLG.3
	cd man/man3; ln -s JudyL.3 JLI.3
	cd man/man3; ln -s JudyL.3 JLD.3
	cd man/man3; ln -s JudyL.3 JLF.3
	cd man/man3; ln -s JudyL.3 JLN.3
	cd man/man3; ln -s JudyL.3 JLL.3
	cd man/man3; ln -s JudyL.3 JLP.3
	cd man/man3; ln -s JudyL.3 JLFE.3
	cd man/man3; ln -s JudyL.3 JLNE.3
	cd man/man3; ln -s JudyL.3 JLLE.3
	cd man/man3; ln -s JudyL.3 JLPE.3
	cd man/man3; ln -s JudyL.3 JLC.3
	cd man/man3; ln -s JudyL.3 JLBC.3
	cd man/man3; ln -s JudyL.3 JLFA.3
	cd man/man3; ln -s JudyL.3 JLMU.3

man/man3/JudyL_funcs.3:
	../tool/jhton ext/JudyL_funcs_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.\.\./\&.\&.\&./' | sed -e 's/\(^Judy.*\) \([a-z].*\)s*-/\1 \\-/' | sed -e '/^.ds/d' | sed -e '/^.\\"/d' | sed -e '/^.TA/d' | sed -e 's/\.C//'| sed -e '2d' > man/man3/JudyL_funcs.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLGet.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLIns.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLDel.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLFirst.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLNext.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLLast.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLPrev.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLFirstEmpty.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLNextEmpty.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLLastEmpty.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLPrevEmpty.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLCount.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLByCount.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLFreeArray.3
	cd man/man3; ln -s JudyL_funcs.3 JudyLMemUsed.3

man/man3/JudySL.3:
	../tool/jhton ext/JudySL_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.\.\./\&.\&.\&./' | sed -e 's/\(^Judy.*\) \([a-z].*\)s*-/\1 \\-/' | sed -e '/^.ds/d' | sed -e '/^.\\"/d' | sed -e '/^.TA/d' | sed -e 's/\.C//'| sed -e '2d' > man/man3/JudySL.3
	cd man/man3; ln -s JudySL.3 JSLG.3
	cd man/man3; ln -s JudySL.3 JSLI.3
	cd man/man3; ln -s JudySL.3 JSLD.3
	cd man/man3; ln -s JudySL.3 JSLF.3
	cd man/man3; ln -s JudySL.3 JSLN.3
	cd man/man3; ln -s JudySL.3 JSLL.3
	cd man/man3; ln -s JudySL.3 JSLP.3
	cd man/man3; ln -s JudySL.3 JSLFA.3

man/man3/JudySL_funcs.3:
	../tool/jhton ext/JudySL_funcs_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.\.\./\&.\&.\&./' | sed -e 's/\(^Judy.*\) \([a-z].*\)s*-/\1 \\-/' | sed -e '/^.ds/d' | sed -e '/^.\\"/d' | sed -e '/^.TA/d' | sed -e 's/\.C//'| sed -e '2d' > man/man3/JudySL_funcs.3
	cd man/man3; ln -s JudySL_funcs.3 JudySLGet.3
	cd man/man3; ln -s JudySL_funcs.3 JudySLIns.3
	cd man/man3; ln -s JudySL_funcs.3 JudySLDel.3
	cd man/man3; ln -s JudySL_funcs.3 JudySLFirst.3
	cd man/man3; ln -s JudySL_funcs.3 JudySLNext.3
	cd man/man3; ln -s JudySL_funcs.3 JudySLLast.3
	cd man/man3; ln -s JudySL_funcs.3 JudySLPrev.3
	cd man/man3; ln -s JudySL_funcs.3 JudySLFreeArray.3

man/man3/JudyHS.3:
	../tool/jhton ext/JudyHS_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.\.\./\&.\&.\&./' | sed -e 's/\(^Judy.*\) \([a-z].*\)s*-/\1 \\-/' | sed -e '/^.ds/d' | sed -e '/^.\\"/d' | sed -e '/^.TA/d' | sed -e 's/\.C//'| sed -e '2d' > man/man3/JudyHS.3
	cd man/man3; ln -s JudyHS.3 JHSG.3
	cd man/man3; ln -s JudyHS.3 JHSI.3
	cd man/man3; ln -s JudyHS.3 JHSD.3
	cd man/man3; ln -s JudyHS.3 JHSFA.3

man/man3/JudyHS_funcs.3:
	../tool/jhton ext/JudyHS_funcs_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.\.\./\&.\&.\&./' | sed -e 's/\(^Judy.*\) \([a-z].*\)s*-/\1 \\-/' | sed -e '/^.ds/d' | sed -e '/^.\\"/d' | sed -e '/^.TA/d' | sed -e 's/\.C//'| sed -e '2d' > man/man3/JudyHS_funcs.3
	cd man/man3; ln -s JudyHS_funcs.3 JudyHSGet.3
	cd man/man3; ln -s JudyHS_funcs.3 JudyHSIns.3
	cd man/man3; ln -s JudyHS_funcs.3 JudyHSDel.3
	cd man/man3; ln -s JudyHS_funcs.3 JudyHSFreeArray.3

CLEANFILES = man/man3/*
